anime-timeline/index.css
/*Github Page Only Controls*/
html {
  font-family: Open Sans;
}

body {
  padding: 5px;
  margin: auto;
  font-size: 0.8em;
}

h2, h3, .labels { 
	text-align: center;
}

.anime-list {
	overflow: scroll;
	height: 500px;
}

.anime-table,
.anime-table tr,
.anime-table td { border-collapse: collapse; }

.anime-table td { white-space: nowrap; }
.anime-table th { padding: 0 5px; }
.anime-table tr { border-bottom: 1px solid #bbbbbb; }
.darked .anime-table tr { border-bottom: 1px solid #444444; }

.anime-table tr:hover {
	border-bottom: 1px solid black;
}

.darked .anime-table tr:hover {
	border-bottom: 1px solid white;
}

.active-period {
	background-color: black;
}

.darked .active-period {
	background-color: white;
}

.anime-table tr:first-child > th {
    position: sticky;
    position: webkit-sticky;
	top: 0;
	left: 0;
    background-color: white;
}

.darked .anime-table tr:first-child > th {
    background-color: black;
}

.anime-table tr:first-child > th:first-child {
	z-index: 1;
    background-color: white;
}

.darked .anime-table tr:first-child > th:first-child {
    background-color: black;
}

.row-title {
    position: sticky;
    position: webkit-sticky;
	left: 0;
    background-color: white;
	border-right: 1px solid #bbbbbb;
	border-bottom: 1px solid #bbbbbb;
	/* transition: background-color 1s; */
	cursor: pointer;
	text-align: right;
	padding: 1px;
}

.darked .row-title {
    background-color: black;
	border-right: 1px solid #444444;
	border-bottom: 1px solid #444444;
}

.row-title:hover {
	color: white;
    background-color: black;
	/* transition: background-color 1s; */
}

.darked .row-title:hover {
	color: black;
    background-color: white;
	/* transition: background-color 1s; */
}

.show-overlay {
	display: none;
}

.show-overlay img {
	border: 0;
	max-width: 150px;
	max-height: 150px;
}

.active-period:hover .show-overlay {
	display: block;
	position: absolute;
	background-color: white;
	font-size: 0.8em;
	border-radius: 8px;
	border: 1px solid black;
	box-shadow: 3px 3px;
	text-align: center;
	padding: 4px 8px;
	z-index: 3;
}

.darked .active-period:hover .show-overlay {
	background-color: black;
	border: 1px solid white;
}

.current-period {
	background-color: #888888;
}

.darked .current-period {
	background-color: #444444;	
}

@media only screen and (max-width: 960px) {
	table {
		font-size: 0.6rem;
	}
	.active-period:hover .show-overlay {
		font-size: 1.5em;
	}
	.row-title {
		padding: 5px 1px;
	}
}

